--- a/login2-0/style.css
+++ b/login2-0/style.css
@@ -14,6 +14,7 @@ body{
     height: 420px;
     background: #000;
     color: #fff;
+    opacity: 0.7;
     top: 50%;
     left: 50%;
     position: absolute;
